# little-handy

./: Cargo.toml
curl2url/: Cargo.toml  Dockerfile  README.md  config.toml  docker-compose.yml  prompt.txt
curl2url/config/: app_config.toml
curl2url/src/: config.rs  errors.rs  handlers.rs  lib.rs  main.rs  models.rs  services.rs  utils.rs
repo-host/: .gitignore  Cargo.toml  Dockerfile  docker-compose.yaml
repo-host/.github/workflows/: build.yml
repo-host/src/: config.rs  git.rs  lib.rs  main.rs  server.rs  util.rs
temp-file-host/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
temp-file-host/config/: sample.toml
temp-file-host/src/: config.rs  handlers.rs  lib.rs  main.rs  models.rs  proxy.rs  services.rs
utils-share/: Cargo.toml
utils-share/src/: crypto.rs  http.rs  lib.rs  response.rs  time.rs  validation.rs
