[workspace]
members = ["curl2url", "temp-file-host", "repo-host", "utils-share"]
resolver = "2"

[workspace.package]
edition = "2024"
authors = ["risun"]

[workspace.dependencies]
# 异步运行时
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }

# Web 框架 (axum)
axum = { version = "0.8", features = ["multipart"] }

# Web 框架 (actix)
actix-web = "4"
actix-files = "0.6"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# 工具库
anyhow = "1.0"
futures-util = "0.3"
urlencoding = "2.1"
dotenv = "0.15"
filetime = "0.2"
url = "2.5"

# 加密
sha2 = "0.10"
hex = "0.4"
sha1 = "0.10"
hmac = "0.12"

# 定时任务
tokio-cron-scheduler = "0.14"

# HTTP 中间件
tower-http = { version = "0.6", features = ["trace", "fs"] }

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
env_logger = "0.11"
log = "0.4.25"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }

# 缓存和并发
moka = { version = "0.12", features = ["future"] }
uuid = { version = "1.9", features = ["v4", "serde"] }
dashmap = "6"

# 临时文件
tempfile = "3.8"

# Git
git2 = "0.20"

# CLI
clap = { version = "4.5", features = ["derive"] }
