[package]
name = "curl2url"
version = "0.0.1"
edition.workspace = true
authors.workspace = true
description = "A simple tool to convert curl command to URL"

[dependencies]
# web & async
tokio.workspace = true
axum.workspace = true
tower-http.workspace = true
reqwest.workspace = true

# serialization & config
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

# utils
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
utils-share = { path = "../utils-share" }
