[package]
name = "repo-host"
version = "0.0.1"
edition.workspace = true
authors.workspace = true
description = "A Git repository hosting service"

[dependencies]
# web
actix-web.workspace = true
actix-files.workspace = true
url.workspace = true
# serde
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
# git
git2.workspace = true
# logging
env_logger.workspace = true
log.workspace = true
# cli
clap.workspace = true
utils-share = { path = "../utils-share" }
# crypto
hex.workspace = true
sha1.workspace = true
sha2.workspace = true
hmac.workspace = true
anyhow.workspace = true