[package]
name = "temp-file-host"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
axum.workspace = true
tokio.workspace = true
tokio-util.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
futures-util.workspace = true
sha2.workspace = true
hex.workspace = true
tokio-cron-scheduler.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
urlencoding.workspace = true
toml.workspace = true
dotenv.workspace = true
filetime.workspace = true
